<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#038E1F"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="#2709E8"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/meButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/me_activity"
                android:onClick="openMeActivity"
                android:text="@string/about_me"
                />

            <Button
                android:id="@+id/myDogButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/dog_activity"
                android:onClick="openTequilaActivity"
                android:text="@string/about_my_dog"
                />

            <Button
                android:id="@+id/navyButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/navy_activity"
                android:onClick="openNavyActivity"
                android:text="@string/about_my_navy_career"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:text="@string/main_splash"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:padding="10dp"
            android:text="@string/increment_counter"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2709E7"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minusBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                />

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                />

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/digitCount"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:padding="10dp"
            android:text="@string/counter"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>